--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'New Event', new_admin_event_path, class: 'btn btn-primary' %>
+<%#= link_to 'New Event', new_admin_event_path, class: 'btn btn-primary' %>
 <hr>
 
 <div class="table-responsive">
@@ -23,5 +23,5 @@
 </div>
 
 <div class="pagination-container text-center">
-	<%= paginate @events %>
+	<%#= paginate @events %>
 </div>
