--- a/app/views/admin/ports/_form.html.erb
+++ b/app/views/admin/ports/_form.html.erb
@@ -11,7 +11,7 @@
 </div>
 <% end %>
 
-<%= render 'admin/admin/images/pictures_upload', f: f -%>
+<%#= render 'admin/admin/images/pictures_upload', f: f -%>
 
 <div class="field">
 	<%= f.label :name %><br>
