--- a/app/views/admin/venues/_form.html.erb
+++ b/app/views/admin/venues/_form.html.erb
@@ -11,24 +11,20 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :slug %><br>
-    <%= f.text_field :slug %>
+  <div class="form-group">
+    <%= f.label :address %>
+    <%= f.text_field :address, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :address %><br>
-    <%= f.text_field :address %>
+  <div class="form-group">
+    <%= f.label :type %>
+    <%= f.text_field :type, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :cruise_line %><br>
-    <%= f.check_box :cruise_line %>
-  </div>
-  <div class="field">
-    <%= f.label :content %><br>
+  <div class="form-group">
+    <%= f.label :content %>
     <%= f.text_area :content, class: 'froala_content' %>
   </div>
   <div class="actions">
