--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Title:</strong>
   <%= @page.title %>
@@ -12,7 +10,7 @@
 
 <p>
   <strong>Content:</strong>
-  <%= @page.content %>
+  <%= @page.rendered_content %>
 </p>
 
 <p>
@@ -20,5 +18,5 @@
   <%= @page.status %>
 </p>
 
-<%= link_to 'Edit', edit_page_path(@page) %> |
-<%= link_to 'Back', pages_path %>
+<%#= link_to 'Edit', edit_page_path(@page) %> |
+<%#= link_to 'Back', pages_path %>
