--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -6,9 +6,8 @@
 		</div>
 	</div>
 </section>
-
-
 <span class="divider"></span>
+
 <div class="container">
 	<div class="row">
 		<div class="col-md-12 lead">
@@ -33,11 +32,11 @@
 		</div>
 	</div>
 </section>
-
 <span class="divider"></span>
+
 <div class="container">
 	<div class="row">
-		<div class="col-sm-7">
+		<div class="col-sm-6 col-md-7">
 			<h4>The Grand Collection of "On Land" Casinos</h4>
 			<p>
 				The Grand Collection offers “Very V.I.P” Group Departures to great <%= link_to 'Gaming Locations', destinations_url, class: 'btn btn-default btn-xs' -%> including: Las Vegas, Atlantic City, New Orleans, Tunica, Reno, Lake Tahoe, Dominican Republic, Windsor, Biloxi etc. We also arrange “Very V.I.P.” Customized Gaming Departures for your personally selected travel dates, as well as advice on where to gamble to receive the most casino comps.
@@ -48,33 +47,8 @@
 			</p>
 			<hr class="visible-xs-block">
 		</div>
-		<div class="col-sm-5">
-			<h3 class="text-center"><%#= fa_icon('calendar') -%> Upcoming Events</h3>
-
-			<%# if @events.any? -%>
-			<ul class="media-list">
-				<%# @events.each do |event| -%>
-				<li class="media">
-					<%#= content_tag :i, nil, class: 'fa fa-fw fa-ship fa-2x media-object pull-left' -%>
-					<div class="media-body">
-						<h5 class="media-heading">
-							<%#= link_to event.title, event -%><br>
-							<small><%#= event.date_span -%></small>
-						</h5>
-						<%#= event.excerpt(80) -%>
-					</div>
-				</li>
-				<%# end -%>
-			</ul>
-			<div class="pull-right">
-				<%= link_to raw('More Events '+fa_icon('calendar')), '#events_url', class: 'btn btn-primary' -%>
-			</div>
-			<%# else -%>
-			<p class="lead text-muted text-center">
-				There are no upcoming events.
-			</p>
-			<%# end -%>
-
+		<div class="col-sm-6 col-md-5">
+			<%= render 'events/upcoming' -%>
 		</div>
 	</div>
 </div>
