--- a/app/views/admin/cruises/_port_of_call_fields.html.erb
+++ b/app/views/admin/cruises/_port_of_call_fields.html.erb
@@ -1,14 +1,15 @@
+ports
 <tr class="nested-fields">
 	<td>
-		<%= f.collection_select :port_id, Port.all, :id, :name, {prompt: 'Select Port'}, {class: 'form-control'} %>
+		<%#= f.collection_select :port_id, Port.all, :id, :name, {prompt: 'Select Port'}, {class: 'form-control'} %>
 	</td>
 	<td>
-		<%= f.datetime_select :arrives_at, class: 'form-control datetimepicker', placeholder: 'Date & Time' %>
+		<%#= f.datetime_select :arrives_at, class: 'form-control datetimepicker', placeholder: 'Date & Time' %>
 	</td>
 	<td>
-		<%= f.datetime_select :departs_at, class: 'form-control datetimepicker', placeholder: 'Date & Time' %>
+		<%#= f.datetime_select :departs_at, class: 'form-control datetimepicker', placeholder: 'Date & Time' %>
 	</td>
 	<td>
-		<%= link_to_remove_association fa_icon('remove'), f, class: 'btn btn-danger btn-xs' %>
+		<%#= link_to_remove_association fa_icon('remove'), f, class: 'btn btn-danger btn-xs' %>
 	</td>
 </tr>
