--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -32,6 +32,7 @@
 				<%= render 'admin/admin/nav' -%>
 			</div>
 			<div class="col-sm-8 col-md-9">
+				<%= render 'layouts/flash' -%>
 				<%= yield %>
 			</div>
 
