--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -1,50 +1,50 @@
 <%= form_for [:admin, @event] do |f| %>
-  <% if @event.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
+<% if @event.errors.any? %>
+<div id="error_explanation">
+	<h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
 
-      <ul>
-      <% @event.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+	<ul>
+		<% @event.errors.full_messages.each do |message| %>
+		<li><%= message %></li>
+		<% end %>
+	</ul>
+</div>
+<% end %>
 
-  <%#= render 'admin/admin/images/pictures_upload', f: f -%>
+<%#= render 'admin/admin/images/pictures_upload', f: f -%>
 
-  <div class="form-group">
-    <%= f.label :title %>
-    <%= f.text_field :title, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :content %>
-    <%= f.text_area :content, class: 'froala_content' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :start_at %>
-    <%= f.datetime_select :start_at %>
-  </div>
-  <div class="form-group">
-    <%= f.label :end_at %>
-    <%= f.datetime_select :end_at %>
-  </div>
-  <div class="form-group">
-    <%= f.label :venue_id %>
-    <%= f.number_field :venue_id, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :host %>
-    <%= f.text_field :host, class: 'form-control' %>
-  </div>
-    <div class="form-group">
-    <%= f.label :type %>
-    <%= f.text_field :type, class: 'form-control' %>
-  </div>
+<div class="form-group">
+	<%= f.label :title %>
+	<%= f.text_field :title, class: 'form-control' %>
+</div>
+<div class="form-group">
+	<%= f.label :content %>
+	<%= f.text_area :content, class: 'froala_content' %>
+</div>
 
-  <%= render 'admin/cruises/port_of_call_fields', f: f if @event.type == 'Cruise' -%>
+<% unless @event.type == 'Cruise' -%>
+<div class="form-group">
+	<%= f.label :start_at %>
+	<%= f.datetime_select :start_at %>
+</div>
+<div class="form-group">
+	<%= f.label :end_at %>
+	<%= f.datetime_select :end_at %>
+</div>
+<% end -%>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<div class="form-group">
+	<%= f.label :venue_id %>
+	<%= f.number_field :venue_id, class: 'form-control' %>
+</div>
+<div class="form-group">
+	<%= f.label :host %>
+	<%= f.text_field :host, class: 'form-control' %>
+</div>
+
+<%= render 'poc_modal', f: f if @event.type == 'Cruise' -%>
+
+<div class="actions">
+	<%= f.submit nil, class: 'btn btn-success' %>
+</div>
 <% end %>
