--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -38,5 +38,5 @@
   <%= @event.content %>
 </p>
 
-<%= link_to 'Edit', edit_admin_event_path(@event) %> |
-<%= link_to 'Back', events_path %>
+<%= link_to 'Edit', sti_event_path(@event.type, @event, :edit) %> |
+<%= link_to 'Back', sti_event_path(@event.type) %>
