--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -29,7 +29,7 @@
 		<div class="row">
 			
 			<div class="col-sm-4 col-md-3">
-				<%= render 'admin/admin/nav' -%>
+				<%= render 'layouts/admin/nav' -%>
 			</div>
 			<div class="col-sm-8 col-md-9">
 				<%= render 'layouts/flash' -%>
