--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -6,20 +6,24 @@
 		<thead>
 			<tr>
 				<th>Title</th>
-				<th>Slug</th>
 				<th>Status</th>
-				<th colspan="3"></th>
+				<th>Last Updated</th>
+				<th></th>
 			</tr>
 		</thead>
 
 		<tbody>
 			<% @pages.each do |page| %>
 			<tr>
-				<td><%= link_to fa_icon('pencil')+page.title, edit_admin_page_path(page) %></td>
-				<td><%= page.slug %></td>
+				<td><%= link_to fa_icon('pencil', text: page.title), edit_admin_page_path(page) %></td>
 				<td><%= page.status %></td>
-				<td><%= link_to 'View Page', short_page_path(page) %></td>
-				<td><%= link_to fa_icon('remove'), [:admin, page], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-xs btn-danger' %></td>
+				<td><%= page.updated_at %></td>
+				<td>
+				<%= link_to fa_icon('eye'), short_page_path(page), class: 'btn btn-xs btn-info' %>
+				<%= link_to fa_icon('remove'), [:admin, page], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-xs btn-danger' %>
+				</td>
+				<td>
+				</td>
 			</tr>
 			<% end %>
 		</tbody>
