--- a/app/views/events/_upcoming.html.erb
+++ b/app/views/events/_upcoming.html.erb
@@ -24,7 +24,7 @@
 	<footer class="panel-footer text-right">
 		<div class="row">
 			<p class="col-sm-6">
-				<%= link_to raw('Browse Events '+fa_icon('calendar')), events_path, class: 'btn btn-info btn-xs btn-block' -%>
+				<%= link_to raw('Browse Events '+fa_icon('calendar')), land_events_path, class: 'btn btn-info btn-xs btn-block' -%>
 			</p>
 			<p class="col-sm-6">
 				<%= link_to raw('Browse Cruises '+fa_icon('ship')), cruises_path, class: 'btn btn-info btn-xs btn-block' -%>
