--- a/app/views/events/_ports.html.erb
+++ b/app/views/events/_ports.html.erb
@@ -1,3 +1,31 @@
-<hr>
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<h3 class="panel-title">Ports of Call</h3>
+	</div>
+	<div class="panel-body">
+		<div id="portsMap" class="gmap"></div>
+	</div>
 
-ports
+	<div class="table-responsive">
+		<table class="table table-striped table-condensed">
+			<thead>
+				<tr>
+					<th>Port</th>
+					<th>Arrival</th>
+					<th>Departure</th>
+				</tr>
+			</thead>
+			<tbody>
+				<% @event.port_of_calls.each_with_index do |poc, index| -%>
+
+				<%= content_tag :tr, class: 'port', data: {lat: poc.port.latitude, lng: poc.port.longitude, index: index} do -%>
+				<td><%= link_to poc.port.name, poc.port, data: {toggle: :modal, target: '#defaultModal'} -%></td>
+				<td><%= poc == @event.port_of_calls.first ? '-' : poc.arrives_at -%></td>
+				<td><%= poc == @event.port_of_calls.last ? '-' : poc.departs_at -%></td>
+				<% end -%>
+
+				<% end -%>
+			</tbody>
+		</table>
+	</div>	
+</div>	
