--- a/app/views/events/_ports.html.erb
+++ b/app/views/events/_ports.html.erb
@@ -3,7 +3,7 @@
 		<h3 class="panel-title">Ports of Call</h3>
 	</div>
 	<div class="panel-body">
-		<div id="portsMap" class="gmap"></div>
+		<div id="pocMap" class="gmap"></div>
 	</div>
 
 	<div class="table-responsive">
@@ -18,8 +18,10 @@
 			<tbody>
 				<% @event.port_of_calls.each_with_index do |poc, index| -%>
 
-				<%= content_tag :tr, class: 'port', data: {lat: poc.port.latitude, lng: poc.port.longitude, index: index} do -%>
-				<td><%= link_to poc.port.name, poc.port, data: {toggle: :modal, target: '#defaultModal'} -%></td>
+				<%= content_tag :tr, class: 'port-of-call', data: {port: poc.port.to_json, index: index} do -%>
+				<td>
+					<%= link_to poc.port.name, poc.port, data: {toggle: :modal, target: '#defaultModal'} -%>
+				</td>
 				<td><%= poc == @event.port_of_calls.first ? '-' : poc.arrives_at -%></td>
 				<td><%= poc == @event.port_of_calls.last ? '-' : poc.departs_at -%></td>
 				<% end -%>
