--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -12,9 +12,16 @@
 
 	<div class="row">
 
-		<div class="col-sm-4 col-md-3 well">
-			<%= render 'flights/search' -%>
-			<%#= link_to 'Reset', flights_path, class: 'btn btn-default btn-sm btn-block' -%>
+		<div class="col-sm-4 col-md-3">
+			<div class="panel panel-default">
+				<header class="panel-heading">
+					<h3 class="panel-title">Find a Flight</h3>
+				</header>
+				<div class="panel-body">
+					<%= render 'flights/search' -%>
+					<%#= link_to 'Reset', flights_path, class: 'btn btn-default btn-sm btn-block' -%>
+				</div>
+			</div>
 		</div>
 		<div class="col-sm-8 col-md-9">
 
