--- a/app/views/admin/ports/_form.html.erb
+++ b/app/views/admin/ports/_form.html.erb
@@ -13,21 +13,26 @@
 
 <%#= render 'admin/admin/images/pictures_upload', f: f -%>
 
-<div class="field">
-	<%= f.label :name %><br>
-	<%= f.text_field :name %>
+<div class="form-group">
+	<%= f.label :name %>
+	<%= f.text_field :name, class: 'form-control' %>
 </div>
-<div class="field">
-	<%= f.label :slug %><br>
-	<%= f.text_field :slug %>
+<div class="form-group">
+	<%= f.label :slug %>
+	<%= f.text_field :slug, class: 'form-control' %>
 </div>
-<div class="field">
-	<%= f.label :content %><br>
+<div class="form-group">
+	<%= f.label :content %>
 	<%= f.text_area :content, class: 'froala_content' %>
 </div>
-<div class="field">
-	<%= f.label :location %><br>
-	<%= f.text_field :location %>
+
+<div class="form-group">
+	<%= f.label :latitude %>
+	<%= f.text_field :latitude, class: 'form-control' %>
+</div>
+<div class="form-group">
+	<%= f.label :longitude %>
+	<%= f.text_field :longitude, class: 'form-control' %>
 </div>
 
 <div class="actions">
