--- a/app/views/admin/venues/_form.html.erb
+++ b/app/views/admin/venues/_form.html.erb
@@ -1,4 +1,6 @@
-<%= form_for [:admin, @venue], html: {multipart: true} do |f| %>
+<% modal_bool = (params[:modal].present? ? true : false) -%>
+
+<%= form_for [:admin, @venue], remote: modal_bool, authenticity_token: true do |f| %>
   <% if @venue.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@venue.errors.count, "error") %> prohibited this venue from being saved:</h2>
@@ -10,6 +12,8 @@
       </ul>
     </div>
   <% end %>
+
+  <%= hidden_field :event_type, nil, value: params[:type] -%>
 
   <div class="form-group">
     <%= f.label :name %>
@@ -28,6 +32,6 @@
     <%= f.text_area :content, class: 'froala_content' %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit nil, class: 'btn btn-primary btn-lg' %>
   </div>
 <% end %>
