--- a/app/views/admin/venues/index.html.erb
+++ b/app/views/admin/venues/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Listing Venues</h1>
 
 <div class="table-responsive">
@@ -18,7 +16,7 @@
 				<td><%= link_to venue.name, edit_admin_venue_path(venue) %></td>
 				<td><%= venue.type %></td>
 				<td><%= link_to 'Show', venue_path(venue) %></td>
-				<td><%#= link_to 'Destroy', [:admin, venue], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+				<td><%= link_to 'Destroy', [:admin, venue], method: :delete, data: { confirm: 'Are you sure?' } %></td>
 			</tr>
 			<% end %>
 		</tbody>
