--- a/app/views/admin/venues/_form.html.erb
+++ b/app/views/admin/venues/_form.html.erb
@@ -23,14 +23,12 @@
     <%= f.label :address %>
     <%= f.text_field :address, class: 'form-control' %>
   </div>
-  <div class="form-group">
-    <%= f.label :type %>
-    <%= f.text_field :type, class: 'form-control' %>
-  </div>
+  <% unless modal_bool -%>
   <div class="form-group">
     <%= f.label :content %>
     <%= f.text_area :content, class: 'froala_content' %>
   </div>
+  <% end -%>
   <div class="actions">
     <%= f.submit nil, class: 'btn btn-primary btn-lg' %>
   </div>
