--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,6 +1,7 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Venues</h1>
+<% content_for :pre_container do -%>
+<%#= render 'static_pages/parallax_header', text: 'Venues', img_url: 'bg-caesars-palace.jpg' -%>
+<span class="divider"></span>
+<% end -%>
 
 <div class="table-responsive">
 	<table class="table table-striped">
