--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,66 +1,55 @@
-<section class="parallax" style="background-image: url('<%= image_url('bg-roulette.jpg') -%>');">
-	<div class="jumbotron">
-		<div class="container text-center">
-			<h1>Destinations</h1>
-		</div>
-	</div>
-</section>
+<% content_for :pre_container do -%>
+<%= render 'static_pages/parallax_header', text: 'Destinations', img_url: 'bg-caesars-palace.jpg' -%>
+<% end -%>
 
+<div class="row">
+	<%# Destination.featured.each do |destination| -%>
 
-
-<span class="divider"></span>
-
-<div class="container">
-
-	<div class="row">
-		<%# Destination.featured.each do |destination| -%>
-
-		<div class="col-sm-6 col-md-3">
-			<div class="thumbnail auto-height" style="">
-				<a class="destination-thumb" href="<%#= destination_path(destination) -%>" style="display: block; height: 150px; background: url('<%#= destination.pictures.first.image_url -%>') center center; background-size: cover;"></a>
-				<div class="caption">
-					<h4>
+	<div class="col-sm-6 col-md-3">
+		<div class="thumbnail auto-height" style="">
+			<a class="destination-thumb" href="<%#= destination_path(destination) -%>" style="display: block; height: 150px; background: url('<%#= destination.pictures.first.image_url -%>') center center; background-size: cover;"></a>
+			<div class="caption">
+				<h4>
 					<%#= destination.name -%>
-						<!-- <br><small>Theme Park</small> -->
-					</h4>
-				</div>
+					<!-- <br><small>Theme Park</small> -->
+				</h4>
 			</div>
 		</div>
-
-		<%# end -%>
 	</div>
 
-	<table class="table table-striped">
-		<thead>
-			<tr>
-				<th>Destination</th>
-				<th>Casinos</th>
-			</tr>
-		</thead>
-
-		<tbody>
-			<% @destinations.each do |destination| %>
-			<tr>
-				<td><%= link_to destination.name, destination -%></td>
-				<td class="small">
-				<ul class="list-inline">
-				<%# destination.casinos.each do |casino| -%>
-				<%#= content_tag :li, link_to(casino.name, casino) -%>
-				<%# end -%>
-				</ul>
-				</td>
-
-			</tr>
-			<% end %>
-		</tbody>
-	</table>
-
-	<div class="pagination-container text-center">
-		<%= paginate @destinations %>
-	</div>
-
-	<% if is_admin? -%>
-	<hr>
-	<%= link_to 'New Destination', new_admin_destination_path %>
-	<% end -%>
+	<%# end -%>
 </div>
+
+<table class="table table-striped">
+	<thead>
+		<tr>
+			<th>Destination</th>
+			<th>Casinos</th>
+		</tr>
+	</thead>
+
+	<tbody>
+		<% @destinations.each do |destination| %>
+		<tr>
+			<td><%= link_to destination.name, destination -%></td>
+			<td class="small">
+				<ul class="list-inline">
+					<%# destination.casinos.each do |casino| -%>
+					<%#= content_tag :li, link_to(casino.name, casino) -%>
+					<%# end -%>
+				</ul>
+			</td>
+
+		</tr>
+		<% end %>
+	</tbody>
+</table>
+
+<div class="pagination-container text-center">
+	<%= paginate @destinations %>
+</div>
+
+<% if is_admin? -%>
+<hr>
+<%= link_to 'New Destination', new_admin_destination_path %>
+<% end -%>
