--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,67 +1,55 @@
-<div class="container">
+<% @page_header = @event.title -%>
 
-	<header class="page-header">
-		<h1>
-			<%= @event.title %>
-		</h1>
-	</header>
+<div class="row">
+	
+	<aside class="col-sm-4">
+		<% if @event.all_pictures.any? -%>
+		<figure class="thumbnail">
+			<%= link_to image_tag(@event.all_pictures.first.gh_url), sti_event_pictures_path(@event), data: {toggle: :modal, target: '#defaultModal'} -%>
+		</figure>
+		<% else -%>
+		<!-- default event image -->
+		<% end -%>
 
-	<div class="row">
-		
-		<aside class="col-sm-4">
-			<% if @event.pictures.any? -%>
-			<figure class="thumbnail">
-				<%= link_to image_tag(@event.pictures.first.gh_url), sti_event_pictures_path(@event), data: {toggle: :modal, target: '#defaultModal'} -%>
-			</figure>
-			<% else -%>
-			<!-- default event image -->
-			<% end -%>
+		<div class="panel panel-default">
+			<header class="panel-heading">
+				<h4 class="panel-title">Details</h4>
+			</header>
+			<div class="panel-body">
+				<p>
+					<strong>Venue:</strong>
+					<%= link_to @event.venue.name, venue_path(@event.venue) %>
+				</p>
 
-			<div class="panel panel-default">
-				<header class="panel-heading">
-					<h4 class="panel-title">Details</h4>
-				</header>
-				<div class="panel-body">
-					<p>
-						<strong>Venue:</strong>
-						<%= link_to @event.venue.name, venue_path(@event.venue) %>
-					</p>
+				<p>
+					<strong>Host:</strong>
+					<%= link_to @event.host, '#@event.host' %>
+				</p>
 
-					<p>
-						<strong>Host:</strong>
-						<%= link_to @event.host, '#@event.host' %>
-					</p>
+				<p>
+					<strong>Start at:</strong>
+					<%= @event.start_at %>
+				</p>
 
-					<p>
-						<strong>Start at:</strong>
-						<%= @event.start_at %>
-					</p>
-
-					<p>
-						<strong>End at:</strong>
-						<%= @event.end_at %>
-					</p>
-				</div>
+				<p>
+					<strong>End at:</strong>
+					<%= @event.end_at %>
+				</p>
 			</div>
-
-
-
-		</aside>
-
-		<div class="col-sm-8">
-			<%= @event.rendered_content %>
-
-			<%= render 'ports' if @event.type == 'Cruise' -%>
 		</div>
 
+	</aside>
 
+	<div class="col-sm-8">
+		<%= @event.rendered_content %>
+
+		<%= render 'ports' if @event.type == 'Cruise' -%>
 	</div>
 
-	<% if is_admin? -%>
-	<hr>
-	<%= link_to 'Edit', sti_event_path(@event.type, @event, :edit) %> |
-	<%= link_to 'Back', sti_event_path(@event.type) %>
-	<% end -%>
-	
-
 </div>
+
+<% if is_admin? -%>
+<hr>
+<%= link_to 'Edit', sti_event_path(@event.type, @event, :edit) %> |
+<%= link_to 'Back', sti_event_path(@event.type) %>
+<% end -%>
