--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,69 +1,59 @@
-<section class="parallax" style="background-image: url('<%= image_url('bg-flights.png') -%>');">
-	<div class="jumbotron">
-		<div class="container text-center">
-			<h1>Flights</h1>
+<% content_for :pre_container do -%>
+<%= render 'static_pages/parallax_header', text: 'Flights', img_url: 'bg-flights.png' -%>
+<% end -%>
+
+<div class="row">
+
+	<div class="col-sm-4 col-md-3">
+		<div class="panel panel-default">
+			<header class="panel-heading">
+				<h3 class="panel-title">Find a Flight</h3>
+			</header>
+			<div class="panel-body">
+				<%= render 'flights/search' -%>
+				<%#= link_to 'Reset', flights_path, class: 'btn btn-default btn-sm btn-block' -%>
+			</div>
 		</div>
 	</div>
-</section>
+	<div class="col-sm-8 col-md-9">
 
-<span class="divider"></span>
+		<div class="table-responsive">
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<%= content_tag :th, sort_link(@flights_q, :departing_airport, 'Departing') %>
+						<%= content_tag :th, sort_link(@flights_q, :departing_at) %>
+						<%= content_tag :th, sort_link(@flights_q, :arriving_airport, 'Destination') %>
+						<%= content_tag :th, sort_link(@flights_q, :arriving_airport, 'Arriving') %>
+						<%= content_tag :th, sort_link(@flights_q, :arriving_at) %>
+						<%#= content_tag :th, sort_link(@flights_q, :flight_number) %>
+					</tr>
+				</thead>
 
-<div class="container">
-
-	<div class="row">
-
-		<div class="col-sm-4 col-md-3">
-			<div class="panel panel-default">
-				<header class="panel-heading">
-					<h3 class="panel-title">Find a Flight</h3>
-				</header>
-				<div class="panel-body">
-					<%= render 'flights/search' -%>
-					<%#= link_to 'Reset', flights_path, class: 'btn btn-default btn-sm btn-block' -%>
-				</div>
-			</div>
+				<tbody>
+					<% @flights.each do |flight| %>
+					<tr>
+						<td><%= airport_popover flight.departing_location %></td>
+						<td><%= flight.departing_at.to_s(:long) %></td>
+						<td><%= link_to flight.destination.name, flight.destination %></td>
+						<td><%= airport_popover flight.arriving_location %></td>
+						<td><%= flight.arriving_at.to_s(:long) %></td>
+						<%#= content_tag td:, flight.flight_number %>
+					</tr>
+					<% end %>
+				</tbody>
+			</table>
 		</div>
-		<div class="col-sm-8 col-md-9">
 
-			<div class="table-responsive">
-				<table class="table table-striped">
-					<thead>
-						<tr>
-							<%= content_tag :th, sort_link(@flights_q, :departing_airport, 'Departing') %>
-							<%= content_tag :th, sort_link(@flights_q, :departing_at) %>
-							<%= content_tag :th, sort_link(@flights_q, :arriving_airport, 'Destination') %>
-							<%= content_tag :th, sort_link(@flights_q, :arriving_airport, 'Arriving') %>
-							<%= content_tag :th, sort_link(@flights_q, :arriving_at) %>
-							<%#= content_tag :th, sort_link(@flights_q, :flight_number) %>
-						</tr>
-					</thead>
-
-					<tbody>
-						<% @flights.each do |flight| %>
-						<tr>
-							<td><%= airport_popover flight.departing_location %></td>
-							<td><%= flight.departing_at.to_s(:long) %></td>
-							<td><%= link_to flight.destination.name, flight.destination %></td>
-							<td><%= airport_popover flight.arriving_location %></td>
-							<td><%= flight.arriving_at.to_s(:long) %></td>
-							<%#= content_tag td:, flight.flight_number %>
-						</tr>
-						<% end %>
-					</tbody>
-				</table>
-			</div>
-
-			<div class="pagination-container text-center">
-				<%= paginate @flights %>
-			</div>
-
+		<div class="pagination-container text-center">
+			<%= paginate @flights %>
 		</div>
 
 	</div>
-
-	<% if is_admin? -%>
-	<hr>
-	<%= link_to 'New Flight', new_admin_flight_path %>
-	<% end -%>
 
 </div>
+
+<% if is_admin? -%>
+<hr>
+<%= link_to 'New Flight', new_admin_flight_path %>
+<% end -%>
