--- a/app/views/admin/casinos/edit.html.erb
+++ b/app/views/admin/casinos/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @casino %> |
-<%= link_to 'Back', admin_casinos_path %>
+<%= link_to 'Back', casinos_path %>
