--- a/app/views/admin/casinos/index.html.erb
+++ b/app/views/admin/casinos/index.html.erb
@@ -1,32 +1,31 @@
-
-
-<h1>Listing Casinos</h1>
+<% content_for :pre_container do -%>
+<%= render 'static_pages/parallax_header', text: 'Casinos', img_url: 'bg-roulette.jpg' -%>
+<% end -%>
 
 <table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Address</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th colspan="2"></th>
-    </tr>
-  </thead>
+	<thead>
+		<tr>
+			<th>Name</th>
+			<th>Address</th>
+			<th>Destination</th>
+			<th colspan="3"></th>
+		</tr>
+	</thead>
 
-  <tbody>
-    <% @casinos.each do |casino| %>
-      <tr>
-        <td><%= link_to casino.name, edit_admin_casino_path(casino) %></td>
-        <td><%= casino.address %></td>
-        <td><%= casino.latitude %></td>
-        <td><%= casino.longitude %></td>
-        <td><%= link_to 'Show', casino %></td>
-        <td><%= link_to 'Destroy', [:admin, casino], method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
+	<tbody>
+		<% @casinos.each do |casino| %>
+		<tr>
+			<td><%= casino.name %></td>
+			<td><%= casino.address %></td>
+			<td><%= casino.destination.try(:name) %></td>
+			<td><%= link_to 'Show', casino %></td>
+			<td><%= link_to 'Edit', edit_casino_path(casino) %></td>
+			<td><%= link_to 'Destroy', casino, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+		</tr>
+		<% end %>
+	</tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Casino', new_admin_casino_path %>
+<%= link_to 'New Casino', new_casino_path %>
