--- a/app/views/casinos/index.html.erb
+++ b/app/views/casinos/index.html.erb
@@ -8,19 +8,19 @@
 			<th>Name</th>
 			<th>Address</th>
 			<th>Destination</th>
-			<th colspan="3"></th>
 		</tr>
 	</thead>
 
 	<tbody>
 		<% @casinos.each do |casino| %>
 		<tr>
-			<td><%= casino.name %></td>
+			<td>
+				<%= link_to_if casino.destination.present?, casino.name, [casino.destination, casino] do %>
+				<%= link_to casino.name, casino -%>
+				<% end -%>
+			</td>
 			<td><%= casino.address %></td>
 			<td><%= casino.destination.try(:name) %></td>
-			<td><%= link_to 'Show', casino %></td>
-			<td><%= link_to 'Edit', edit_casino_path(casino) %></td>
-			<td><%= link_to 'Destroy', casino, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 		</tr>
 		<% end %>
 	</tbody>
@@ -28,4 +28,7 @@
 
 <br>
 
-<%= link_to 'New Casino', new_casino_path %>
+<% if is_admin? -%>
+<hr>
+<%= link_to 'New Casino', new_admin_casino_path %>
+<% end -%>
