--- a/app/views/casinos/index.html.erb
+++ b/app/views/casinos/index.html.erb
@@ -2,31 +2,43 @@
 <%= render 'static_pages/parallax_header', text: 'Casinos', img_url: 'bg-roulette.jpg' -%>
 <% end -%>
 
-<table class="table table-striped">
-	<thead>
-		<tr>
-			<th>Name</th>
-			<th>Address</th>
-			<th>Destination</th>
-		</tr>
-	</thead>
+<div class="row">
+	<div class="col-sm-6">
+		<div class="well well-sm">
+			<div id="casinosMap" class="gmap"></div>
+		</div>
+	</div>
+	<div class="col-sm-3"><div class="thumbnail"></div></div>
+	<div class="col-sm-3"><div class="thumbnail"></div></div>
+</div>
 
-	<tbody>
-		<% @casinos.each do |casino| %>
-		<tr>
+<div class="table-responsive">
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Address</th>
+				<th>Destination</th>
+			</tr>
+		</thead>
+
+		<tbody>
+			<% @casinos.each do |casino| %>
+
+			<%= content_tag :tr, class: 'casino', data: {casino: casino.to_json} do -%>
 			<td>
 				<%= link_to_if casino.destination.present?, casino.name, [casino.destination, casino] do %>
 				<%= link_to casino.name, casino -%>
 				<% end -%>
 			</td>
 			<td><%= casino.address %></td>
-			<td><%= casino.destination.try(:name) %></td>
-		</tr>
-		<% end %>
-	</tbody>
-</table>
+			<td><%= link_to_if casino.destination.present?, casino.destination.try(:name), casino.destination %></td>
+			<% end %>
 
-<br>
+			<% end %>
+		</tbody>
+	</table>
+</div>
 
 <% if is_admin? -%>
 <hr>
