--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -3,21 +3,18 @@
 <% end -%>
 
 <div class="row">
-	<%# Destination.featured.each do |destination| -%>
-
+	<% @destinations.has_image.each do |destination| -%>
 	<div class="col-sm-6 col-md-3">
-		<div class="thumbnail auto-height" style="">
-			<a class="destination-thumb" href="<%#= destination_path(destination) -%>" style="display: block; height: 150px; background: url('<%#= destination.pictures.first.image_url -%>') center center; background-size: cover;"></a>
+		<div class="well well-sm">
+			<%= link_to image_tag(destination.all_pictures.first.gh_url, class: 'img-thumbnail'), destination -%>
 			<div class="caption">
 				<h4>
-					<%#= destination.name -%>
-					<!-- <br><small>Theme Park</small> -->
+					<%= destination.title -%>
 				</h4>
 			</div>
 		</div>
 	</div>
-
-	<%# end -%>
+	<% end -%>
 </div>
 
 <table class="table table-striped">
@@ -34,12 +31,11 @@
 			<td><%= link_to destination.name, destination -%></td>
 			<td class="small">
 				<ul class="list-inline">
-					<%# destination.casinos.each do |casino| -%>
-					<%#= content_tag :li, link_to(casino.name, casino) -%>
-					<%# end -%>
+					<% destination.casinos.each do |casino| -%>
+					<%= content_tag :li, link_to(casino.name, [destination, casino]) -%>
+					<% end -%>
 				</ul>
 			</td>
-
 		</tr>
 		<% end %>
 	</tbody>
