venue show view

--- a/app/views/admin/ports/edit.html.erb
+++ b/app/views/admin/ports/edit.html.erb
@@ -3,4 +3,5 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @port %> |
-<%= link_to 'Back', admin_ports_path %>
+<%= link_to 'Back', admin_ports_path %> |
+<%= link_to 'Delete', [:admin, @port], method: :delete, data: { confirm: 'Are you sure?' } %>
