--- a/app/views/events/_upcoming.html.erb
+++ b/app/views/events/_upcoming.html.erb
@@ -1,11 +1,13 @@
-<% if @events.any? -%>
+<% events ||= @events -%>
+
+<% if events.any? -%>
 <div class="panel panel-default">
 	<div class="panel-heading">
 		<h3 class="panel-title text-center">Upcoming Events</h3>
 	</div>
 
 	<div class="list-group">
-		<% @events.each do |event| -%>
+		<% events.each do |event| -%>
 		<%= link_to event, class: 'list-group-item' do -%>
 		<div class="list-group-item-text media">
 			<%= content_tag :i, nil, class: "fa fa-fw fa-#{event.icon} fa-2x media-object pull-left" -%>
@@ -21,6 +23,7 @@
 		<% end -%>
 	</div>
 
+	<% if render_footer -%>
 	<footer class="panel-footer text-right">
 		<div class="row">
 			<p class="col-sm-6">
@@ -31,6 +34,8 @@
 			</p>
 		</div>
 	</footer>
+	<% end -%>
+
 </div>
 <% else -%>
 <p class="lead text-muted text-center">
