--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,3 +1,9 @@
-// Place all the styles related to the events controller here.
+// Place all the styles related to the destinations controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@media (max-width: 768px) {
+	.auto-height {
+		margin-bottom: 20px !important;
+	}
+}
